# prism

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  prism  prism.py  pyproject.toml  ruff.toml  runtests.py  setup.py  tox.ini
lib/: ansi.py  grep.py
prism/: __init__.py  __main__.py  ansi.py  cli.py  colour.py  config.py  events.py  grep.py  log.py  output.py  prism  prism.select.bak
prism/test/: __init__.py  ansi.py  ansi_test.py  colour_test.py  grep_test.py
test/: grep.py
tools/: pip-requires  test-requires
